# rag-training

./: .env.example  .gitignore  .vercelignore  README.md  build_static.py  chat.py  pyproject.toml  requirements.txt  vercel.json
data/docplanner_kb/: 01_booking_policy.md  02_cancellation_policy.md  03_teleconsultation.md  04_payments_insurance.md  05_doctor_profiles_faq.md  06_reviews_ratings.md  07_account_privacy.md  08_clinic_admin_tims.md  09_no_show_policy.md
eval/: evaluate.py  generate_snapshot.py  golden_dataset.json  rerank_hard_examples.json  results_snapshot.json
index/: meta.json  vectors.npy
src/: agentic_rag.py  chunking.py  classifier.py  config.py  embeddings.py  events.py  finetune_illustration.py  ingest.py  keyword_retriever.py  langgraph_agent.py  prompting_lab.py  rag.py  reranker.py  retriever.py  session_store.py  tokenizer_demo.py  vector_store.py
tests/: test_pipeline.py
web/: server.py
web/static/: app.js  index.html  llms.txt  manifest.json  robots.txt  sitemap.xml  style.css  vector-map-3d.js
web/static/RAG/: index.html
